set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/)

set(contrib_modules_list fakesink kafka)
if(CMAKE_TOOLCHAIN_FILE)
  include_directories(${PROJECT_SOURCE_DIR}/include)
  set(LibRDKafka_C_LIBRARIES rdkafka)
else()
  include("${PROJECT_SOURCE_DIR}/cmake/FindLibRDKafka.cmake")
  include_directories(${LibRDKafka_INCLUDE_DIR})
endif()

include_directories(${PROJECT_SOURCE_DIR}/modules)
include_directories(${PROJECT_SOURCE_DIR}/modules/util/include)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty/cppcodec)

foreach(contrib_module ${contrib_modules_list})
  include_directories(${PROJECT_SOURCE_DIR}/modules_contrib/${contrib_module}/include)
  install(DIRECTORY ${PROJECT_SOURCE_DIR}/modules_contrib/${contrib_module}/include/ DESTINATION include)
  file(GLOB_RECURSE contrib_module_src ${PROJECT_SOURCE_DIR}/modules_contrib/${contrib_module}/*.cpp)
  list(APPEND contrib_module_srcs ${contrib_module_src})
endforeach()

if(DEFINED contrib_modules_list)
  add_library(cnstream_contrib SHARED ${contrib_module_srcs})
  set_target_properties(cnstream_contrib PROPERTIES LINK_FLAGS_RELEASE -s)
  include_directories(${OpenCV_INCLUDE_DIRS})
  target_link_libraries(cnstream_contrib cnrt easydk cnstream_core cnstream_va ${OpenCV_LIBS}
    ${SOURCE_LINKER_LIBS} ${LibRDKafka_C_LIBRARIES})
  install(TARGETS cnstream_contrib LIBRARY DESTINATION lib)
endif()
