set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/)

if(WITH_RTSP)
  set(app_modules_list rtsp_sink)
endif()
if(cnstream_build_integrated_lib)
  foreach(app_module ${app_modules_list})
    include_directories(${PROJECT_SOURCE_DIR}/apps/modules/${app_module}/include)
    file(GLOB_RECURSE app_module_src ${PROJECT_SOURCE_DIR}/apps/modules/${app_module}/*.cpp)
    list(APPEND app_module_srcs ${app_module_src})
    if(app_module STREQUAL "rtsp_sink")
      set(Live555_LIBS "")
      if(HAVE_FFMPEG)
        include_directories(${FFMPEG_INCLUDE_DIR})
      endif()
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
      include_directories(${PROJECT_SOURCE_DIR}/3rdparty/live555/include/BasicUsageEnvironment)
      include_directories(${PROJECT_SOURCE_DIR}/3rdparty/live555/include/groupsock)
      include_directories(${PROJECT_SOURCE_DIR}/3rdparty/live555/include/liveMedia)
      include_directories(${PROJECT_SOURCE_DIR}/3rdparty/live555/include/UsageEnvironment)
      include_directories(${PROJECT_SOURCE_DIR}/apps/modules/${app_module}/src)
      link_directories(${PROJECT_SOURCE_DIR}/3rdparty/live555/lib)
      set(Live555_LIBS liveMedia UsageEnvironment BasicUsageEnvironment groupsock)
    endif()
  endforeach()
  if(DEFINED app_modules_list)
    add_library(app-modules SHARED ${app_module_srcs})
    include_directories(${OpenCV_INCLUDE_DIRS})
    target_link_libraries(app-modules cnrt cnstream-toolkit ${Live555_LIBS} ${OpenCV_LIBS} ${SOURCE_LINKER_LIBS})
    if(NOT Live555_LIBS STREQUAL "")
      add_custom_target(live555 sh ${PROJECT_SOURCE_DIR}/tools/build_live555.sh)
      add_dependencies(app-modules live555)
    endif()
  endif()
else()
  foreach(app_module ${app_modules_list})
    add_subdirectory(${app_module})
  endforeach()
endif()