set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/)
include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/settings.cmake)
include_directories("${Example_INCLUDE_DIRS}")
message(${Example_INCLUDE_DIRS})
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} srcs)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/preprocess preprocess_srcs)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/postprocess postprocess_srcs)
set(SRC detection.cpp)
ADD_LIBRARY(pydetector SHARED ${SRC} ${preprocess_srcs} ${postprocess_srcs})
target_link_libraries(pydetector ${Example_LINKER_LIBS} ${FFMPEG_LIBRARIES} ${OpenCV_LIBS})

